# minecraftfreecam.github.io

./: .gitignore  LICENSE  README.md  freecam_files.py  mkdocs.yaml  properdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml
overrides/partials/: logo.html
src/: config.md  index.md
src/style/: extra.css  palette.css
