[project]
name = "freecam-website"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.4",
    "mkdocs-material",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.0",
    "ruff>=0.15.6",
]

[tool.uv]
package = false
constraint-dependencies = [
    # Needed for mkdocs live reload to work
    # https://github.com/mkdocs/mkdocs/issues/4032
    "click<=8.2.1",
]
